@@ -1,5 +1,10 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (CreateMainWin): Use fixed height mode for the
+	treeview. HUGE speed win in all situations.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* log_repaint.c (logview_draw_log_lines): No need to select the
 	line if monitoring.
 
